Achievements and teams added

--- a/html/Achievements.html
+++ b/html/Achievements.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="../css/navbar.css"> 	
 	<link rel="stylesheet" href="../css/footer.css">
 	
-	
 	<link rel="stylesheet" type="text/css" href="../css/Achievements.css">
 </head>
 <body>
@@ -26,12 +25,12 @@
 				  />
 				
 				  <ul class="nav-items">
-					<li class="nav-item"><a href="../index.html">home</a></li>
-					<li class="nav-item"><a href="../index.html#about">about</a></li>               
+					<li class="nav-item"><a href="../index.html">Home</a></li>
+					<li class="nav-item"><a href="../index.html#about">About</a></li>               
 					<li class="nav-item"><a href="Events_programs.html">Events</a></li>
 					<li class="nav-item"><a href="Achievements.html">Achievements</a></li>
-					<li class="nav-item"><a href="Members.html">team</a></li>
-					<li class="nav-item"><a href="contact.html">contact</a></li>
+					<li class="nav-item"><a href="Members.html">Team</a></li>
+					<li class="nav-item"><a href="contact.html">Contact</a></li>
 					<!-- <li class="nav-item" ><a href="" style="background-color: rgb(96, 173, 189); border-radius: 10px; padding: 10px;">Login</a></li>
 					</li> -->
 				  </ul>
@@ -46,9 +45,9 @@
 	</header>-->
 <div class="blog-start">
 	<div class="blog">
-		<h1>Achievements</h1>
+		<b><h1 style="color:black">Achievements</h1></b>
 		<br><br>
-		<p>The ASME website's achievement section is a platform that showcases the accomplishments of ASME members, including awards, fellowships, and other honors they have received. It provides an overview of the various recognition programs offered by ASME and highlights the achievements of the society's members.The section includes information on the nomination and selection process for ASME awards and fellowships, as well as profiles of past winners. It serves as a resource for members seeking recognition for their work and as a source of inspiration for others in the mechanical engineering community.
+		<p style="color:black; font-size:20px; font-family:sans-serif;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The ASME website's achievement section is a platform that showcases the accomplishments of ASME members, including awards, fellowships, and other honors they have received. It provides an overview of the various recognition programs offered by ASME and highlights the achievements of the society's members.The section includes information on the nomination and selection process for ASME awards and fellowships, as well as profiles of past winners. It serves as a resource for members seeking recognition for their work and as a source of inspiration for others in the mechanical engineering community.
 			Overall, the achievement section of the ASME website is a testament to the society's commitment to celebrating excellence in mechanical engineering and honoring the individuals who have made significant contributions to the field.
 		</p>
 	</div>
