--- a/html/Members.html
+++ b/html/Members.html
@@ -29,12 +29,12 @@
                     <img src="../images/asmecumminslogo.jpeg"alt="ASME - CCOEW"width="150"height="81"class="logo"/>
                 
                   <ul class="nav-items">
-                    <li class="nav-item"><a href="../index.html">home</a></li>
-                    <li class="nav-item"><a href="../index.html#about">about</a></li>               
+                    <li class="nav-item"><a href="../index.html">Home</a></li>
+                    <li class="nav-item"><a href="../index.html#about">About</a></li>               
                     <li class="nav-item"><a href="Events_programs.html">Events</a></li>
                     <li class="nav-item"><a href="Achievements.html">Achievements</a></li>
-                    <li class="nav-item"><a href="#">team</a></li>
-                    <li class="nav-item"><a href="contact.html">contact</a></li>
+                    <li class="nav-item"><a href="#">Team</a></li>
+                    <li class="nav-item"><a href="contact.html">Contact</a></li>
                     
                   </ul>
                 </div>
@@ -59,12 +59,12 @@
 
     <!-- Team title div -->
 <div class ="Title">
-    <h1 >Our Team</h1>
+    <h1>OUR TEAM</h1>
     <div class="Anc-links">
         <div>
         <a href="#Y23-24"> A.Y.2023-2024</a>
         </div>
-        <div>
+        <div style="color:black;">
         <a href="#Y22-23"> A.Y.2022-2023</a>
         </div>
     </div>
